test/parser/Queries/syntax_errors/fail_K-ForExprWithout-38.xq
( where ***foo*** ne ************ eq ***************** let **** ne ****************)
(:  eq Test: K-ForExprWithout-38                    foo       :)
(: Written by: Fransfoo Englich  foo where          foo        ne             eq :foo)
 let (: Date: 2006-10-05T18:29:37+02:00       where       eq    ne          :)
(: Purpose: for  Variable which  where is not in scope.         foo     :)
 for (:***********foo******* ne **************** for *********************:)
for $foo  eq in ($foo,2, 3) return 1